# connect

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.codex/environments/: environment.toml
.github/actions/infra-common-setup/: action.yml
.github/workflows/: ci.yml  deploy-worker.yml  deploy.yml  incident-auto-fix.yml  incident-handler.yml  ops-logs-fetch.yml  ops-nodes-reboot.yml  ops-worker-bluegreen.yml  preflight.yml
alembic/: env.py
alembic/versions/: 20260427_0001_init_connect.py
docs/: architecture-v1.md  control-plane.md  deploy-automation.md  launch-checklist.md  project-scope.md  stack-decision.md
infra/ansible/: inventory.example.ini
infra/ansible/playbooks/: bootstrap.yml  deploy_control.yml  install_xray.yml  render_worker_config.yml  sync_nodes_control.yml
infra/ansible/templates/: fail2ban-jail.local.j2  (+2 more)
infra/compose/: Dockerfile.control  docker-compose.control.yml
infra/terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf  versions.tf
nodes/: nodes.example.json
routing/: routing-ru-direct.json
runbooks/: launch-day-checklist.md  operations-7-days.md
scripts/: check-required-env.sh  cleanup-do-resources.py  generate-reality-keys.sh  healthcheck.sh  preflight.sh  render-ansible-inventory.sh  render-xray-node-configs.sh  sync-nodes-from-terraform.sh  validate-admin-cidrs.py  validate-xray-configs.sh
src/control_plane/: __init__.py  api.py  cli.py  config.py  db.py  models.py  repositories.py
xray/templates/: base-reality.json.tmpl  xhttp-reality.json.tmpl
(+14 files in other folders)
