[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "connect-control-plane"
version = "0.1.0"
description = "Automation-first Connect control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.111.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "typer>=0.12.3",
  "uvicorn>=0.30.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pydo>=0.15.0",
]

[project.scripts]
connectctl = "control_plane.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]
